--- a/fifth.html
+++ b/fifth.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ease Learn Home Page</title>
-    <link rel="stylesheet" href="class.css">
+    <link rel="stylesheet" href="subject.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
@@ -20,11 +20,11 @@
             </div>
             <div class="logo">Ease Learn</div>
 
-            <ul class="navbar">
-                <li><a href="#section1">Home</a></li>
-                <li><a href="#section3">About</a></li>
-                <li><a href="#section2">Help</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+             <ul class="navbar">
+                <li class="nav1"><button type="button" placeholder="home">Home</button></li>
+                <li class="nav1"><button type="button" placeholder="about">About</button></li>
+                <li class="nav1"><button type="button" placeholder="help">Help</button></li>
+                <li class="nav1"><button type="button" placeholder="contact us">Contact Us</button></li>
             </ul>
         </nav>
     </header>
