--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="logo">Ease Learn</div>
 
             <ul class="navbar">
-                <li><a href="#section1">Home</a></li>
-                <li><a href="#section3">About</a></li>
-                <li><a href="#section2">Help</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li class="nav1"><button type="button" placeholder="home">Home</button></li>
+                <li class="nav1"><button type="button" placeholder="about">About</button></li>
+                <li class="nav1"><button type="button" placeholder="help">Help</button></li>
+                <li class="nav1"><button type="button" placeholder="contact us">Contact Us</button></li>
             </ul>
         </nav>
     </header>
